SSO-529 Скрытие регистрации. Оставить только в iframe - Декодирование referer